@@ -37,7 +37,6 @@
 #include "freeipmi/fiid/fiid.h"
 #include "freeipmi/record-format/ipmi-sdr-record-format.h"
 #include "freeipmi/record-format/oem/ipmi-sdr-oem-intel-node-manager-record-format.h"
-#include "freeipmi/spec/ipmi-event-reading-type-code-oem-spec.h"
 
 #include "ipmi-sdr-common.h"
 #include "ipmi-sdr-defs.h"
